test/ui/tests/parsing/unbalanced-brackets1.stderr
error[E001]: unbalanced round bracket
 --> ${TEST_FOLDER}/parsing/unbalanced-brackets1.lushui:3:1
  |
3 | )) it ]
  | ^ has no matching opening round bracket
  |

error[E010]: found `)` but expected declaration
 --> ${TEST_FOLDER}/parsing/unbalanced-brackets1.lushui:3:1
  |
3 | )) it ]
  | ^ unexpected token
  |

error[E001]: unbalanced round bracket
 --> ${TEST_FOLDER}/parsing/unbalanced-brackets1.lushui:3:2
  |
3 | )) it ]
  |  ^ has no matching opening round bracket
  |

error[E001]: unbalanced square bracket
 --> ${TEST_FOLDER}/parsing/unbalanced-brackets1.lushui:3:7
  |
3 | )) it ]
  |       ^ has no matching opening square bracket
  |

error: aborting due to 4 previous errors
 note: the errors E001 and E010 have a detailed explanation
 help: run `lushui explain <codes...>` to view a selection of them

